--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "generate-password": "^1.7.1",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "run": "^1.5.0"
   }
 }
